--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@ body {
     margin: 0 auto;
     text-align: center;
     color: white;
+    font-weight: 800;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.5rem;
 }
 
 #containerSqr {
